--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-boot.version>3.5.7</spring-boot.version>
+		<!-- 🚀 FIX: Força a versão do Flyway para uma que existe e é recente, esperando que suporte o Postgres 17.6. -->
+		<flyway.version>10.15.0</flyway.version>
 	</properties>
 
 	<dependencies>
@@ -82,6 +84,7 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+			<!-- A versão é puxada da propriedade flyway.version definida acima. -->
 		</dependency>
 
 		<!-- Lombok -->
