--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,8 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.validate-on-migrate=true
 spring.flyway.out-of-order=false
+spring.flyway.repair-on-migrate=true
+
 
 ###############################################################
 # REDIS ? Upstash (modo REST HTTPS)
