--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,10 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.validate-on-migrate=true
 spring.flyway.out-of-order=false
-spring.flyway.repair-on-migrate=true
 
+# ?CORREÇÃO TEMPORÁRIA PARA CHECKSUM MISMATCH (REMOVER APÓS O PRÓXIMO DEPLOY)
+spring.flyway.repair-on-migrate=true
+spring.flyway.clean-disabled=true
 
 ###############################################################
 # REDIS ? Upstash (modo REST HTTPS)
