--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,12 +24,12 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.validate-on-migrate=true
 spring.flyway.out-of-order=false
 
-# ?CORREÇÃO TEMPORÁRIA PARA CHECKSUM MISMATCH (REMOVER APÓS O PRÓXIMO DEPLOY)
+#CORREÇÃO CHECKSUM MISMATCH
 spring.flyway.repair-on-migrate=true
 spring.flyway.clean-disabled=true
 
 ###############################################################
-# REDIS ? Upstash (modo REST HTTPS)
+# REDIS Upstash (modo REST HTTPS)
 ###############################################################
 spring.data.redis.url=${UPSTASH_REDIS_REST_URL}
 spring.data.redis.password=${UPSTASH_REDIS_REST_TOKEN}
@@ -38,7 +38,7 @@ spring.cache.type=redis
 spring.data.redis.timeout=2000
 
 ###############################################################
-# RABBITMQ ? CloudAMQP
+# RABBITMQ CloudAMQP
 ###############################################################
 spring.rabbitmq.addresses=${CLOUDAMQP_URL}
 spring.rabbitmq.ssl.enabled=true
