--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
 	</dependencies>
 
 	<build>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -111,7 +112,14 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 	</build>
 
 </project>
