--- a/pom.xml
+++ b/pom.xml
@@ -18,22 +18,6 @@
 	<name>gs-synapse</name>
 	<description>API para gerenciamento do projeto GS Synapse</description>
 
-	<licenses>
-		<license>
-			<name>Apache License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-
-	<scm>
-		<connection>scm:git:git://github.com/giovannarevitoroz/gs-synapse-java.git</connection>
-		<developerConnection>scm:git:ssh://github.com/giovannarevitoroz/gs-synapse-java.git</developerConnection>
-		<url>https://github.com/giovannarevitoroz/gs-synapse-java</url>
-		<tag>HEAD</tag>
-	</scm>
-
-
 	<properties>
 		<java.version>17</java.version>
 		<spring-boot.version>3.5.7</spring-boot.version>
@@ -42,43 +26,35 @@
 	</properties>
 
 	<dependencies>
-
-		<!-- Spring Boot starters -->
+		<!-- Spring Boot Starters -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
@@ -107,6 +83,7 @@
 			<artifactId>flyway-database-postgresql</artifactId>
 		</dependency>
 
+		<!-- JWT -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
@@ -123,6 +100,13 @@
 			<version>0.11.5</version>
 		</dependency>
 
+		<!-- Servlet API correta -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- Springdoc OpenAPI -->
 		<dependency>
@@ -142,18 +126,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>9.0.62</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -165,7 +142,7 @@
 				<version>${spring-boot.version}</version>
 			</plugin>
 
-			<!-- Maven Compiler Plugin com annotationProcessor para Lombok -->
+			<!-- Maven Compiler Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -192,9 +169,7 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-
 		</plugins>
-
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
