--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.flyway.validate-on-migrate=true
 spring.flyway.out-of-order=false
 
 #CORREÇÃO CHECKSUM MISMATCH
+spring.flyway.repair-on-migrate=true
 spring.flyway.clean-disabled=true
 
 ###############################################################
