--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.validate-on-migrate=true
 spring.flyway.out-of-order=false
 
-#CORREÇÃO CHECKSUM MISMATCH
+# CORREÇÃO TEMPORÁRIA: ATIVAR APENAS PARA ESTE DEPLOY
 spring.flyway.repair-on-migrate=true
 spring.flyway.clean-disabled=true
 
