--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.flyway.out-of-order=false
 
 # CORREÇÃO TEMPORÁRIA: ATIVAR APENAS PARA ESTE DEPLOY
 spring.flyway.clean-disabled=true
+spring.flyway.repair-on-migrate=true
 
 ###############################################################
 # REDIS Upstash (modo REST HTTPS)
