--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,12 +21,12 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
-spring.flyway.validate-on-migrate=true
 spring.flyway.out-of-order=false
 
 # CORREÇÃO TEMPORÁRIA: ATIVAR APENAS PARA ESTE DEPLOY
 spring.flyway.clean-disabled=true
-spring.flyway.repair-on-migrate=false
+spring.flyway.repair-on-migrate=true   
+spring.flyway.validate-on-migrate=false 
 
 ###############################################################
 # REDIS Upstash (modo REST HTTPS)
