--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,8 @@ spring.redis.url=rediss://:AVB6AAIncDI1ODA5Zjg5NmM0ZGY0YzNmYjA2Yjc0N2RkZTFkODRhO
 spring.cache.type=redis
 spring.data.redis.timeout=2000
 
+server.forward-headers-strategy=native
+
 ###############################################################
 # RABBITMQ CloudAMQP
 ###############################################################
