--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,7 +69,9 @@ spring.data.web.pageable.max-page-size=100
 ###############################################################
 logging.level.org.springframework=INFO
 logging.level.com.fiap=DEBUG
-
+# Adicione ou ajuste estas linhas:
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 #---
 
 ###############################################################
