--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,11 @@ server.port=8080
 ###############################################################
 # POSTGRES (Render) ?
 ###############################################################
-spring.datasource.url=jdbc:postgresql://dpg-d4d8upadbo4c73dmfv7g-a.oregon-postgres.render.com:5432/synapsedb_9sp1
-spring.datasource.username=synapsedb_9sp1_user
-spring.datasource.password=rvtEFRIHQkqZxRoUMaRTc9PUAUopjSHE
+spring.datasource.url=jdbc:postgresql://dpg-d4fkosv5r7bs73cqcjr0-a.oregon-postgres.render.com:5432/synapse_t3j2
+spring.datasource.username=synapse_t3j2_user
+spring.datasource.password=5cfvN6OJtYVsbJ1A6QNVI4zFdIviLmuU
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
@@ -25,7 +26,7 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.out-of-order=false
 spring.flyway.clean-disabled=true
-spring.flyway.repair-on-migrate=true   
+spring.flyway.repair-on-migrate=true
 spring.flyway.validate-on-migrate=false
 
 server.forward-headers-strategy=native
@@ -35,13 +36,11 @@ server.forward-headers-strategy=native
 ###############################################################
 # RABBITMQ CloudAMQP ?
 ###############################################################
-# Configurações do RabbitMQ com URL hardcoded.
 spring.rabbitmq.addresses=amqps://mnufithp:7H4ttYAWYGuOyDwOtzvu2DfnUU9Hd4Lo@gorilla.lmq.cloudamqp.com/mnufithp
 spring.rabbitmq.ssl.enabled=true
 spring.rabbitmq.ssl.validate-server-certificate=false
 spring.rabbitmq.ssl.verify-hostname=false
 
-# Queue default
 app.rabbitmq.queue=gs_queue
 
 #---
@@ -69,16 +68,15 @@ spring.data.web.pageable.max-page-size=100
 ###############################################################
 logging.level.org.springframework=INFO
 logging.level.com.fiap=DEBUG
-# Adicione ou ajuste estas linhas:
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
+
 #---
 
 ###############################################################
 # APPLICATION ??
 ###############################################################
 spring.application.name=gs-synapse
-
 
 ###############################################################
 # ERROR HANDLING ?
